examples/diagnostics/errors/module_name_clobber_ok.flx
  fn ember() {
    return 1;
  }
